Add functional examples